--- a/SurfsUp/climate_starter2.ipynb
+++ b/SurfsUp/climate_starter2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,35 +55,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Moham\\AppData\\Local\\Temp\\ipykernel_24488\\4196587217.py:4: SADeprecationWarning: The AutomapBase.prepare.reflect parameter is deprecated and will be removed in a future release.  Reflection is enabled when AutomapBase.prepare.autoload_with is passed.\n",
-      "  Base.prepare(engine, reflect=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# reflect an existing database into a new model\n",
     "Base = automap_base()\n",
     "# reflect the tables\n",
-    "Base.prepare(engine, reflect=True)"
+    "Base.prepare(autoload_with=engine)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['measurement', 'station']\n"
+      "['station', 'measurement']\n"
      ]
     }
    ],
@@ -94,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
